<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">YGO Calculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="d1txt">Duelist 1</string>
    <string name="d2txt">Duelist 2</string>
    <string name="enter_name">Enter Name</string>
    <string name="title">Yu-Gi-Oh! Pro Calculator</string>
    <string name="start">Duel!</string>
    <string name="title_activity_calc">CalcActivity</string>
    <string name="dmg">Damage</string>
    <string name="rec">Recover</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="multiply">x</string>
    <string name="divide">/</string>
    <string name="equals">=</string>
    <string name="clear">Clear</string>
    <string name="dice">Dice Roll</string>
    <string name="coin">Coin</string>
    <string name="LP">8000</string>
    <string name="num0">0</string>
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="num4">4</string>
    <string name="num5">5</string>
    <string name="num6">6</string>
    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="num9">9</string>
    <string name="reset">Reset</string>

</resources>