<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".CalcActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="5dp" >
        
	    <TextView
	        android:id="@+id/duelist1_name"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:textColor="#FFF"
	        android:layout_weight="1"
	        android:textSize="13sp"
	        android:gravity="center"
	        android:text="@string/d1txt"/>
	    
	    <TextView
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1" />
	    
	    <TextView
	        android:id="@+id/duelist2_name"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:textColor="#FFF"
	        android:layout_weight="1"
	        android:textSize="13sp"
	        android:gravity="center"
	        android:text="@string/d2txt"/>
    
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
	    <TextView
	        android:id="@+id/duelist1_LP"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:textColor="#FFF"
	        android:layout_weight="1"
	        android:textSize="25sp"
	        android:gravity="center"
	        android:text="@string/LP"/>
	    
	    <TextView
	        android:id="@+id/effectLP"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:textColor="#FFF"
	        android:layout_weight="1"
	        android:textSize="25sp"
	        android:gravity="center"
	        android:text="@string/num0" />
	        
	    
	    <TextView
	        android:id="@+id/duelist2_LP"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:textColor="#FFF"
	        android:layout_weight="1"
	        android:textSize="25sp"
	        android:gravity="center"
	        android:text="@string/LP"/>
	    
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
	    <Button
	        android:id="@+id/duelist1_btn"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:textColor="#FFF"
	        android:layout_weight="1"
	        android:textSize="13sp"
	        android:gravity="center"
	        android:text="@string/d1txt"
	        android:onClick="affectDuelist"/>
	    
	    <Button
	        android:id="@+id/btn_dmgRec"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:textColor="#FFF"
	        android:layout_weight="1"
	        android:textSize="13sp"
	        android:gravity="center"
	        android:text="@string/dmg"
	        android:onClick="dmgRecSwitch"/>
	    
	    <Button
	        android:id="@+id/duelist2_btn"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:textColor="#FFF"
	        android:layout_weight="1"
	        android:textSize="13sp"
	        android:gravity="center"
	        android:text="@string/d2txt"
	        android:onClick="affectDuelist"/>
	    
    </LinearLayout>    
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        
	    <Button
	        android:id="@+id/numBtn_1"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:textColor="#FFF"
	        android:layout_weight="1"
	        android:textSize="13sp"
	        android:gravity="center"
	        android:text="@string/num1"
	        android:onClick="effectLPChange"/>
	    
	    <Button
	        android:id="@+id/numBtn_2"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:textColor="#FFF"
	        android:layout_weight="1"
	        android:textSize="13sp"
	        android:gravity="center"
	        android:text="@string/num2"
	        android:onClick="effectLPChange"/>
	    
	    <Button
	        android:id="@+id/numBtn_3"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:textColor="#FFF"
	        android:layout_weight="1"
	        android:textSize="13sp"
	        android:gravity="center"
	        android:text="@string/num3"
	        android:onClick="effectLPChange"/>
    
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        
	    <Button
	        android:id="@+id/numBtn_4"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:textColor="#FFF"
	        android:layout_weight="1"
	        android:textSize="13sp"
	        android:gravity="center"
	        android:text="@string/num4"
	        android:onClick="effectLPChange"/>
	    
	    <Button
	        android:id="@+id/numBtn_5"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:textColor="#FFF"
	        android:layout_weight="1"
	        android:textSize="13sp"
	        android:gravity="center"
	        android:text="@string/num5"
	        android:onClick="effectLPChange"/>
	    
	    <Button
	        android:id="@+id/numBtn_6"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:textColor="#FFF"
	        android:layout_weight="1"
	        android:textSize="13sp"
	        android:gravity="center"
	        android:text="@string/num6"
	        android:onClick="effectLPChange"/>
    
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        
	    <Button
	        android:id="@+id/numBtn_7"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:textColor="#FFF"
	        android:layout_weight="1"
	        android:textSize="13sp"
	        android:gravity="center"
	        android:text="@string/num7"
	        android:onClick="effectLPChange"/>
	    
	    <Button
	        android:id="@+id/numBtn_8"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:textColor="#FFF"
	        android:layout_weight="1"
	        android:textSize="13sp"
	        android:gravity="center"
	        android:text="@string/num8"
	        android:onClick="effectLPChange"/>
	    
	    <Button
	        android:id="@+id/numBtn_9"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:textColor="#FFF"
	        android:layout_weight="1"
	        android:textSize="13sp"
	        android:gravity="center"
	        android:text="@string/num9"
	        android:onClick="effectLPChange"/>
    
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >
        
	    <Button
	        android:id="@+id/numBtn_0"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:textColor="#FFF"
	        android:textSize="13sp"
	        android:text="@string/num0"
	        android:onClick="effectLPChange"/>
	    
	 </LinearLayout>
	 
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp"
        >
        
	    <Button
	        android:id="@+id/mathbtn_add"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:textColor="#FFF"
	        android:layout_weight="1"
	        android:textSize="13sp"
	        android:gravity="center"
	        android:text="@string/add"
	        android:onClick="effectLPMath"/>
	    
	    <Button
	        android:id="@+id/mathbtn_subtract"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:textColor="#FFF"
	        android:layout_weight="1"
	        android:textSize="13sp"
	        android:gravity="center"
	        android:text="@string/subtract"
	        android:onClick="effectLPMath"/>
	    
	    <Button
	        android:id="@+id/mathbtn_multiply"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:textColor="#FFF"
	        android:layout_weight="1"
	        android:textSize="13sp"
	        android:gravity="center"
	        android:text="@string/multiply"
	        android:onClick="effectLPMath"/>
	    
	    <Button
	        android:id="@+id/mathbtn_divide"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:textColor="#FFF"
	        android:layout_weight="1"
	        android:textSize="13sp"
	        android:gravity="center"
	        android:text="@string/divide"
	        android:onClick="effectLPMath"/>
    
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >
        
	    <Button
	        android:id="@+id/mathbtn_equals"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:textColor="#FFF"
	        android:textSize="13sp"
	        android:layout_weight="1"
	        android:text="@string/equals"
	        android:onClick="effectLPEquals"/>
	    
	     <Button
	        android:id="@+id/clear"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:textColor="#FFF"
	        android:textSize="13sp"
	        android:layout_weight="1"
	        android:text="@string/clear"
	        android:onClick="clear"/>
	    
	 </LinearLayout>
	 
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >
        
	    <Button
	        android:id="@+id/rand_coin"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:textColor="#FFF"
	        android:textSize="13sp"
	        android:layout_weight="1"
	        android:text="@string/coin"
	        android:onClick="coinFlip"/>
	    
	     <Button
	        android:id="@+id/rand_dice"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:textColor="#FFF"
	        android:textSize="13sp"
	        android:layout_weight="1"
	        android:text="@string/dice"
	        android:onClick="diceRoll"/>
	    
	 </LinearLayout>
	 
     <Button
	        android:id="@+id/reset_btn"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:textColor="#FFF"
	        android:textSize="13sp"
	        android:text="@string/reset"
	        android:onClick="reset"/>

</LinearLayout>