<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:background="@drawable/background"
    tools:context=".IntroActivity" >
    
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#FFF"
        android:text="@string/title"
        android:textSize="32sp"
        android:paddingTop="50dp"
        android:gravity="center"
        android:paddingBottom="50dp"
        />    
        
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
		    <TextView
		        android:id="@+id/d1"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:text="@string/d1txt"
		        android:textColor="#FFF"
		        android:layout_weight="1"
		        android:gravity="center"
		        android:paddingBottom="10dp" />
		    
		      <EditText android:id="@+id/duelist1"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="2"
		        android:textColor="#FFF"
		        android:hint="@string/enter_name"
		        android:paddingBottom="10dp"/>
      
      </LinearLayout>
      
	<LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="30dp" >
      
		    <TextView
		        android:id="@+id/d2"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:text="@string/d2txt"
		        android:layout_weight="1"
		        android:gravity="center"
		        android:textColor="#FFF" />
		    
		      <EditText android:id="@+id/duelist2"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="2"
		        android:textColor="#FFF"
		        android:hint="@string/enter_name" />
      
      </LinearLayout>
      
	<Button
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:text="@string/start"
       android:onClick="startCalc" />
	

</LinearLayout>